# minishell

./: .gitignore  1  2  CMakeLists.txt  Makefile  README.md  errors  examples.c  main.c  malloc_test.c  multipipe.c  pipe_redirs.c  sand.c
GoogleTest/: CMakeLists.txt  main.cpp
GoogleTest/Tests/: test.cpp
GoogleTest/lib/googletest-master/: CMakeLists.txt
GoogleTest/project/: project.c
libft/: CMakeLists.txt  Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  (+6 more)
readline/: libhistory.dylib  libreadline.dylib
sandbox/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  here.txt  minishell.cbp  pipe_redirs.c  pipe_redirs_old.c  sandbox
src/: add.c  init.c  main.c
src/builtins/: array_utils.c  array_utils2.c  builtins.c  cd.c  echo.c  exec.c  ft_cd.c  ft_echo.c  ft_env.c  ft_exit.c  ft_export.c  ft_pwd.c  ft_unset.c  heredoc.c  main.c  not_for_push_utils.c  pipes.c  pipex.c  redirects.c  return_utils.c  signal.c  tools.c
src/includes/: minishell.h
src/parser/: check_valid.c  cmd_tools.c  envs_func.c  parser.c  tools_func.c
src/parser/main/: main.c
tests/: test.cpp
tests/builtins/: builtins.cpp  builtins.h  cmd_generator.c  cmd_generator.cpp
